src/tests/snapshots/cendol__tests__pp_digraphs__digraph_brace.snap
---
source: src/tests/pp_digraphs.rs
expression: tokens
---
- kind: LeftBrace
  text: "{"
- kind: Number
  text: "1"
- kind: Semicolon
  text: ;
- kind: Number
  text: "2"
- kind: Semicolon
  text: ;
- kind: RightBrace
  text: "}"
