src/tests/snapshots/cendol__tests__pp_digraphs__digraph_bracket.snap
---
source: src/tests/pp_digraphs.rs
expression: tokens
---
- kind: LeftBracket
  text: "["
- kind: Number
  text: "1"
- kind: Comma
  text: ","
- kind: Number
  text: "2"
- kind: RightBracket
  text: "]"
