src/tests/snapshots/cendol__tests__pp_digraphs__digraph_line_splice.snap
---
source: src/tests/pp_digraphs.rs
expression: tokens
---
- kind: Number
  text: "1"
- kind: Number
  text: "12"
