src/tests/snapshots/cendol__tests__pp_digraphs__digraph_mixed.snap
---
source: src/tests/pp_digraphs.rs
expression: tokens
---
- kind: Identifier
  text: int
- kind: Identifier
  text: x
- kind: LeftBracket
  text: "["
- kind: Number
  text: "1"
- kind: RightBracket
  text: "]"
- kind: Assign
  text: "="
- kind: LeftBrace
  text: "{"
- kind: Number
  text: "12"
- kind: RightBrace
  text: "}"
- kind: Semicolon
  text: ;
