src/tests/snapshots/cendol__tests__pp_digraphs__digraph_pasting.snap
---
source: src/tests/pp_digraphs.rs
expression: tokens
---
- kind: Identifier
  text: int
- kind: Identifier
  text: xy
- kind: Assign
  text: "="
- kind: Number
  text: "42"
- kind: Semicolon
  text: ;
