src/tests/snapshots/cendol__tests__pp_digraphs__digraph_skipping.snap
---
source: src/tests/pp_digraphs.rs
expression: tokens
---
- kind: Identifier
  text: this
- kind: Identifier
  text: is
- kind: Identifier
  text: not
- kind: Identifier
  text: skipped
