src/tests/snapshots/cendol__tests__pp_digraphs__digraphs_in_macros.snap
---
source: src/tests/pp_digraphs.rs
expression: tokens
---
- kind: StringLiteral
  text: "\"abc\""
- kind: Identifier
  text: ab
